--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
   <body>
     <!-- Write your code here -->
 	  <div class="container">
-		  <div class="fb" id="left">
+		  <div class="fb" class="left">
 			  <img alt="Facebook logo" src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" height="100px">
 			  <p>Facebook helps you connect and share with the people in your life.</p>
 		  </div>
