--- a/main.html
+++ b/main.html
@@ -3,23 +3,19 @@
     <title>Facebook Login</title>
   </head>
   <body>
-    <!-- Write your code here -->
-	  <div class="container">
-		  <div class="fb" class="left">
-			  <img alt="Facebook logo" src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" height="100px">
-			  <p>Facebook helps you connect and share with the people in your life.</p>
-		  </div>
-		  <div class="fb" id="right">
-			  <form>
-				  <input type="text" id="email" placeholder="Email address or phone number">
-				  <input type="password" id="password" placeholder="Password">
-				  <button type="submit" id="submit">Log in</button>
-				  <a href="">Forgotten account?</a>
-				  <button class="signup" id="signup">Create new account</button>
-			  </form>
-			  
-		  </div>
-	  </div>
-	  
-  </body>
+  <div class="left">
+    <img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="Facebook logo" width="250" />
+    <p>Facebook helps you connect and share with the people in your life.</p>
+  </div>
+
+  <div class="right">
+    <form>
+      <input type="text" id="email" placeholder="Email address or phone number" />
+      <input type="password" id="password" placeholder="Password" />
+      <button type="submit">Log in</button>
+      <a href="#">Forgotten account?</a>
+    </form>
+    <button class="signup">Create new account</button>
+  </div>
+</body>
 </html>
